# ciserviceex

./: .travis.yml  LICENSE  README.rst  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
ciserviceex/: __init__.py
docs/: Makefile  conf.py  index.rst  make.bat
docs/source/: appveyor.rst  ciserviceex.rst  travis-ci.rst
tests/: test_calc.py
