[metadata]
license-file = LICENSE

; [files]
; packages =
;    ciserviceex

; [entry_points]
; console_scripts =
;    command_name = module.file:func(ex:main)

[global]
; setup-hooks =

[build_sphinx]
source-dir = docs/source
build-dir = docs/build
all_files = 1

[upload_sphinx]
upload-dir = docs/build/html

[wheel]
universal = 1
